🩹 Fix(matuge waybar): make some things more legible

--- a/dot_config/matugen/templates/matugen_waybar_template.css
+++ b/dot_config/matugen/templates/matugen_waybar_template.css
@@ -60,7 +60,7 @@ window#waybar {
 
 /* Custom Ordinal Clock */
 #custom-ordinal-clock {
-  color: @iris;
+  color: @rose;
   padding: 0 8px;
 }
 
@@ -133,7 +133,7 @@ window#waybar {
 
 /* Backlight */
 #backlight {
-  color: @iris;
+  color: @rose;
   padding: 0 8px;
 }
 
